--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/components/_g-header.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/components/_g-header.sass
@@ -57,8 +57,6 @@
                 position: relative
                 margin: 0 1vw
                 @include lg
-                    margin: 0 1.5vw
-                @include xl
                     margin: 0 2vw 
                 &:last-child
                     margin-right: 0          
@@ -74,6 +72,8 @@
                     text-transform: uppercase 
                     @extend %animate-underline
                     @include lg
+                        font-size: 14px 
+                    @include xl
                         font-size: 16px 
                     &:hover, &:active, &.active
                         color: $c-orange 
