--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/components/_g-nav-mobile.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/components/_g-nav-mobile.sass
@@ -24,7 +24,8 @@
         img
             max-height: 88px
     ul
-        padding-bottom: 30px
+        // padding-bottom: 30px
+        @include pb(3)
         border-bottom: 1px solid $c-orange
         a
             color: $c-white
