--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/components/_g_hero.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/components/_g_hero.sass
@@ -20,7 +20,7 @@
         text-transform: uppercase
         letter-spacing: 1.44px
         text-shadow: 0px 0px 10px $c-black
-        // @extend .mb-3
+        @include mb(3)
         @include lg
             font-size: 3vw
             line-height: 3.5vw
@@ -28,5 +28,5 @@
             font-size: 48px
             line-height: 56px
     p
-        // @extend .mb-4
+        @include mb(4)
         color: $c-white       
