--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/elements/_e_buttons.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/EIT/styles/sass/elements/_e_buttons.sass
@@ -3,11 +3,9 @@
 		display: block
 		border: 1px solid red
 		text-transform: uppercase
-		text-align: center
-		// @extend .pt-2
-		// @extend .pb-2
-		// @extend .pr-4
-		// @extend .pl-4
+		text-align: center 
+		@include px(4)
+		@include py(2)
 		line-height: 1.6
 		font-size: 14px
 		letter-spacing: 1.6px
